syntax = "proto3";

package history;

option go_package = ".";

// types: -----------------------------------------------------------------------
message History {
    string id = 1;
    string title = 2;
    string action = 3;
    string createdAt = 4;
}

// messages: --------------------------------------------------------------------
message GetHistoryRequest {
  string userId = 1;
}

message GetHistoryResponse {
    History history = 1;
}

message GetHistoriesRequest {
    string userId = 1;
}

message GetHistoriesResponse {
    repeated History histories = 5;
}

message PutHistoryRequest {
    string userId = 1;
    string action = 2;
}

message PutHistoryResponse {
    History history = 1;
}

// services: --------------------------------------------------------------------
service HistoryService {
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
  rpc GetHistories(GetHistoriesRequest) returns (GetHistoriesResponse);
  rpc PutHistory(PutHistoryRequest) returns (PutHistoryResponse);
}