syntax = "proto3";

package user;

option go_package = ".";

// messages: --------------------------------------------------------------------
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
    string id = 1;
    string email = 2;
    string username = 3;
    string token = 4;
    string role = 5;
}

// services: --------------------------------------------------------------------
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}